--- a/resources/css/my-style.css
+++ b/resources/css/my-style.css
@@ -33,3 +33,9 @@ div.dataTables_paginate.paging_simple_numbers a.current {
     border: 1px solid rgb(68, 68, 68);
     border-radius: 5px;
 }
+
+span.select2.select2-container {
+    border: 1px solid rgb(170, 170, 170);
+    border-radius: 5px;
+    padding-top: 5px;
+}
